--- a/src/web/en/index.html
+++ b/src/web/en/index.html
@@ -7,6 +7,7 @@
     <title>Curator AI</title>
     <link href="../output.css" rel="stylesheet">
     <script src="../adapt.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/i18next@21.6.0/dist/umd/i18next.min.js"></script>
 </head>
 
 <body class="font-sans text-lg mx-auto flex flex-col min-h-screen">
@@ -16,12 +17,12 @@
             <!-- Buttons for choosing the language -->
             <ul class="flex ml-10 space-x-4">
                 <!-- Button for switching language to English -->
-                <li class="hover:underline" data-lang="en" aria-label="Change language to english"><a
-                        href="/en/index.html" lang="en" onclick="changeLanguage('en')">EN</a></li>
+                <li class="hover:underline" data-lang="en" aria-label="Change language to english"><a lang="en"
+                        onclick="changeLanguage('en')">EN</a></li>
                 <li>|</li>
                 <!-- Button for switching language to Fernch -->
-                <li class="hover:underline" data-lang="fr" aria-label="Changer la langue en français"><a
-                        href="/fr/index.html" lang="fr" onclick="changeLanguage('fr')">FR</a></li>
+                <li class="hover:underline" data-lang="fr" aria-label="Changer la langue en français"><a lang="fr"
+                        onclick="changeLanguage('fr')">FR</a></li>
             </ul>
         </div>
         <!-- Title of the webpage -->
@@ -37,65 +38,72 @@
         <!-- Button for sign up -->
         <button
             class="bg-light_blue text-white font-bold rounded-full p-2 absolute right-10 top-1/2 -translate-y-1/2 text-center hover:bg-blue-500 focus:outline-none focus:ring focus:ring-blue-300"
-            onclick="signUp()" aria-label="Sign up">Sign up</button>
+            onclick="signUp()" aria-label="Sign up" data-i18n="SignUp" aria-live="polite"></button>
     </nav>
 
     <div class="container mx-auto text-center flex-grow">
         <!-- Begin Hero Unit -->
-        <h2 class="text-3xl font-bold mb-2">Want to stay updated on your favorite topics?</h2>
-        <h2 class="text-3xl font-bold mb-2">Not enough time to read all your newsletters?</h2>
-        <h2 class="text-3xl font-bold mb-2">Want to save time on your research?</h2>
-        <h class="text-3xl font-bold mb-2">CURATOR AI is made for you!</h>
+        <h2 class="text-3xl font-bold mb-2" data-i18n="HeroUnit1" aria-live="polite"></h2>
+        <h2 class="text-3xl font-bold mb-2" data-i18n="HeroUnit2" aria-live="polite"></h2>
+        <h2 class="text-3xl font-bold mb-2" data-i18n="HeroUnit3" aria-live="polite"></h2>
+        <h2 class="text-3xl font-bold mb-2" data-i18n="HeroUnit4" aria-live="polite"></h2>
         <!-- Button for sign up -->
         <div>
             <button
                 class="text-3xl bg-light_blue text-white font-bold rounded-full p-2 m-10 text-center hover:bg-blue-500 focus:outline-none focus:ring focus:ring-blue-300"
-                onclick="signUp()" aria-label="Sign Up">Try it now!</button>
+                onclick="signUp()" aria-label="Sign Up" data-i18n="TryIt" aria-live="polite"></button>
         </div>
         <!-- End Hero Unit -->
 
         <!-- Separator -->
         <hr class="my-4 border-gray-300">
-        <h2 class="text-3xl font-bold mb-2">Your personalized news curator</h2>
-        <h2 class="">Set your email preferences and receive a newsletter that suits you!</h2>
+        <h2 class="text-3xl font-bold mb-2" data-i18n="Expln1" aria-live="polite"></h2>
+        <h2 class="" data-i18n="Expln2" aria-live="polite"></h2>
         <!-- Add an image of a received email here when it works. -->
 
         <!-- Separator -->
         <hr class="my-4 border-gray-300">
-        <h2 class="text-3xl font-bold mb-2">What is Curator AI ?</h2>
-        <p class="mb-10">Curator AI is a tool to always be up to date with you newsletters.</p>
+        <h2 class="text-3xl font-bold mb-2" data-i18n="Qu1" aria-live="polite"></h2>
+        <p class="mb-10" data-i18n="Answ1" aria-live="polite"></p>
 
         <!-- Separator -->
         <hr class="my-4 border-gray-300">
-        <h2 class="text-3xl font-bold mb-2">Why should I use Curator AI ?</h2>
-        <p class="mb-10">It will greatly improve you time.</p>
+        <h2 class="text-3xl font-bold mb-2" data-i18n="Qu2" aria-live="polite"></h2>
+        <p class="mb-10" data-i18n="Answ2" aria-live="polite"></p>
 
         <!-- Separator -->
         <hr class="my-4 border-gray-300">
-        <h2 class="text-3xl font-bold mb-2">How does Curator AI works ?</h2>
-        <p class="mb-10">Curator AI is powered mainly by the OpenAI API. All the configuration can be made through
-            mails.</p>
+        <h2 class="text-3xl font-bold mb-2" data-i18n="Qu3" aria-live="polite"></h2>
+        <p class="mb-10" data-i18n="Answ3" aria-live="polite"></p>
 
         <!-- Separator -->
         <hr class="my-4 border-gray-300">
         <!-- Begin List of comments -->
-        <h2 class="text-3xl font-bold mb-2">Here are some reviews of our users :</h2>
+        <h2 class="text-3xl font-bold mb-2" data-i18n="ListComments" aria-live="polite"></h2>
         <div class="flex justify-center">
             <div class="bg-slate-200 text-left font-semibold m-10 p-3 rounded-lg">
-                <p>Such wow, much amaze</p>
-                <p class="font-light text-right">- Doge</p>
+                <p data-i18n="Comment1" aria-live="polite"></p>
+                <p class="font-light text-right">-
+                    <a data-i18n="User1" aria-live="polite"></a>
+                </p>
             </div>
             <div class="bg-slate-200 text-left font-semibold m-10 p-3 rounded-lg">
-                <p>Much surprise, very impress</p>
-                <p class="font-light text-right">- An impressed Doge</p>
+                <p data-i18n="Comment2" aria-live="polite"></p>
+                <p class="font-light text-right">-
+                    <a data-i18n="User2" aria-live="polite"></a>
+                </p>
             </div>
             <div class="bg-slate-200 text-left font-semibold m-10 p-3 rounded-lg">
-                <p>Such speed, very fast, wow</p>
-                <p class="font-light text-right">- Shareholder Doge</p>
+                <p data-i18n="Comment3" aria-live="polite"></p>
+                <p class="font-light text-right">-
+                    <a data-i18n="User3" aria-live="polite"></a>
+                </p>
             </div>
             <div class="bg-slate-200 text-left font-semibold m-10 p-3 rounded-lg">
-                <p>Such coding, much smart, wow</p>
-                <p class="font-light text-right">- An expert Doge</p>
+                <p data-i18n="Comment4" aria-live="polite"></p>
+                <p class="font-light text-right">-
+                    <a data-i18n="User4" aria-live="polite"></a>
+                </p>
             </div>
         </div>
         <!-- End List of comments -->
