[style] Added some titles

--- a/src/web/pages/index.html
+++ b/src/web/pages/index.html
@@ -100,6 +100,7 @@
         </div>
 
         <div class="w-screen text-center mt-20">
+            <h3 class="text-base font-semibold text-mid_blue ml-4 mb-2" data-i18n="How0" aria-live="polite"></h3>
             <h2 class="text-4xl font-bold mb-5" data-i18n="How" aria-live="polite"></h2>
             <p class="mb-2" data-i18n="HowAnsw1" aria-live="polite"></p>
             <p data-i18n="HowAnsw2" aria-live="polite"></p>
@@ -111,6 +112,7 @@
 
 
         <div class="bg-gray-500 text-white w-screen text-center p-10 mt-20">
+            <h3 class="text-base font-semibold text-blue-950 ml-4 mb-2" data-i18n="Why0" aria-live="polite"></h3>
             <h2 class="text-4xl font-bold mb-2" data-i18n="Why" aria-live="polite"></h2>
             <p data-i18n="WhyAnsw1" aria-live="polite"></p>
             <p data-i18n="WhyAnsw2" aria-live="polite"></p>
